# templates

./: README.md  templates.json
orbit-grpc-indexer/: .env.example  .gitignore  Cargo.toml  README.md  config.yml  docker-compose.yml
orbit-grpc-indexer/crates/config/: Cargo.toml
orbit-grpc-indexer/crates/config/src/: lib.rs  loader.rs  model.rs
orbit-grpc-indexer/crates/core/: Cargo.toml
orbit-grpc-indexer/crates/core/src/: enricher.rs  error.rs  filter.rs  health.rs  lib.rs  paginator.rs  sink.rs  stream.rs  types.rs
orbit-grpc-indexer/crates/db/: Cargo.toml
orbit-grpc-indexer/crates/db/src/: lib.rs  pool.rs  query.rs  sink.rs
orbit-grpc-indexer/crates/db/src/entity/: account_touched.rs  inner_instruction.rs  mod.rs  transaction.rs
orbit-grpc-indexer/crates/filter/: Cargo.toml
orbit-grpc-indexer/crates/filter/src/: account.rs  composite.rs  lib.rs  program.rs
orbit-grpc-indexer/crates/indexer/: Cargo.toml
orbit-grpc-indexer/crates/indexer/src/: main.rs  metrics.rs  pipeline.rs  shutdown.rs
orbit-grpc-indexer/crates/ingest/: Cargo.toml
orbit-grpc-indexer/crates/ingest/src/: backoff.rs  jetstream.rs  lib.rs  merge.rs  yellowstone.rs
orbit-grpc-indexer/crates/proto/: Cargo.toml  build.rs
orbit-grpc-indexer/crates/proto/src/: lib.rs
orbit-grpc-indexer/frontend/: next.config.ts  package-lock.json
orbit-grpc-indexer/frontend/src/app/: globals.css  layout.tsx  page.tsx
orbit-grpc-indexer/frontend/src/app/accounts/[address]/: page.tsx
orbit-grpc-indexer/frontend/src/app/transactions/: page.tsx
orbit-grpc-indexer/frontend/src/app/transactions/[signature]/: page.tsx
orbit-grpc-indexer/frontend/src/components/: Header.tsx  LiveFeed.tsx  Pagination.tsx  SourceBadge.tsx  StatsCard.tsx  TransactionRow.tsx
orbit-grpc-indexer/frontend/src/lib/: api.ts  ws.ts
orbit-grpc-indexer/migrations/: 0001_create_transactions.sql  0002_create_inner_instructions.sql  0003_create_accounts_touched.sql
orbit-grpc-indexer/protos/: geyser.proto
orbit-grpc-indexer/server/: Cargo.toml
orbit-grpc-indexer/server/src/: error.rs  filter.rs  health.rs  main.rs  response.rs  router.rs  state.rs
orbit-grpc-indexer/server/src/handler/: account.rs  health.rs  mod.rs  transaction.rs  ws.rs
orbit-grpc-indexer/server/src/pagination/: cursor.rs  mod.rs  offset.rs
solana-blinks-axum/: README.md
solana-blinks-axum/frontend/: next.config.ts  package-lock.json
solana-blinks-axum/frontend/src/app/: globals.css  layout.tsx  page.tsx
solana-blinks-axum/frontend/src/components/: blink-card.tsx  providers.tsx  wallet-button.tsx
solana-blinks-axum/frontend/src/lib/: actions.ts  constants.ts  types.ts
solana-copy-trader/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yml  docker-compose.yml  prometheus.yml
solana-copy-trader/copy-trader/: Cargo.toml
solana-copy-trader/copy-trader/src/: config.rs  lib.rs  main.rs  types.rs
solana-copy-trader/copy-trader/src/decoder/: jupiter.rs  mod.rs  pumpfun.rs  raydium.rs
solana-copy-trader/copy-trader/src/execution/: engine.rs  jito.rs  jupiter_client.rs  mod.rs  rpc_client.rs  sizing.rs
solana-copy-trader/copy-trader/src/output/: journal.rs  metrics.rs  mod.rs  telegram.rs
solana-copy-trader/copy-trader/src/safety/: mod.rs  rate_limiter.rs  token_filter.rs
solana-copy-trader/copy-trader/src/state/: redis.rs
solana-copy-trader/copy-trader/src/stream/: filter.rs  manager.rs  mod.rs
solana-copy-trader/grafana/: copy-trader.json
solana-copy-trader/jetstream_protos/: Cargo.toml  build.rs
solana-copy-trader/jetstream_protos/src/: lib.rs
solana-copy-trader/migrations/: 001_init.sql
