[package]
name = "copy-trader"
version.workspace = true
edition.workspace = true

[[bin]]
name = "copy-trader"
path = "src/main.rs"

[dependencies]
jetstream_protos = { path = "../jetstream_protos" }

# Async runtime
tokio.workspace = true
tokio-stream = "0.1.18"
futures = "0.3.32"

# gRPC
tonic.workspace = true
prost.workspace = true

# Serialization / config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
shellexpand = "3.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12.22", features = ["rustls-tls", "json"], default-features = false }

# Solana
solana-sdk = "2.2"
bs58 = "0.5.1"
base64 = "0.22.1"
bincode = "1.3"

# WebSocket (for confirmation strategy)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# PostgreSQL
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Metrics
prometheus = "0.14"

# HTTP server for metrics
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1.12", features = ["tokio"] }
http-body-util = "0.1.3"

# Time
chrono = { version = "0.4.44", features = ["serde"] }

# Derive helpers
strum = { version = "0.26", features = ["derive"] }

# Fast PRNG
fastrand = "2"
