[package]
name = "indexer-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
indexer-proto.workspace = true
indexer-core.workspace = true
indexer-config.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
thiserror.workspace = true
bs58.workspace = true
chrono.workspace = true
serde_json.workspace = true
